# assistant-ui-anywidget

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  ANYWIDGET_SYNC_GUIDE.md  API_DESIGN.md  CI_FIXES.md  CLAUDE.md  DESIGN.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_PLAN.md  PLAN.md  PYDANTIC_AI_MIGRATION_PLAN.md  README.md  SIMPLIFICATION_PLAN.md  SIMPLIFIED_ARCHITECTURE_SUMMARY.md  UI_COMPONENTS_DESIGN.md  VECTOR_DB_INTEGRATION.md  debug_tool_calling.py  debug_widget.py  demo_global_agent.ipynb  demo_kernel_assistant.ipynb  package-lock.json  package.json  pydantic-ai-docs-full.txt  pyproject.toml  pytest.ini  t  take_screenshot.py  test_ai_integration.py  test_automatic.py  test_clearing.py  test_interrupt_flow.py  test_notebook.py  test_real_ai_integration.py  test_simple_functional.py  test_simplified_ai.py  test_single_message.py  test_text_sync.py  test_ui_flow.py  (+7 more)
.github/: dependabot.yml
.github/workflows/: ci.yml
assistant_ui_anywidget/: __init__.py  agent_widget.py  ai_service.py  enhanced_agent_widget.py  global_agent.py  kernel_interface.py  kernel_tools.py  message_handlers.py  module_inspector.py  simple_handlers.py
assistant_ui_anywidget/ai/: __init__.py  agent.py  langgraph_service.py  logger.py  mock.py  prompt_config.py  pydantic_ai_service.py  service.py  simple_functional_ai_service.py  simple_service.py  simplified_pydantic_ai_service.py  system_prompt.yaml
docs/: DOCUMENTATION_STATUS.md  PLAN.md  VECTOR_DB_INTEGRATION.md  code_history_feature.md
examples/: demo_global_agent.ipynb  demo_kernel_assistant.ipynb  langgraph_approval_demo.ipynb
frontend/: README.md  demo.html  eslint.config.js  package-lock.json  package.json  vite.config.test.ts  vite.config.ts  vite.demo.config.ts  vitest.config.ts
frontend/demo/: index.html
frontend/scripts/: screenshot.cjs  screenshot.js  serve-demo.cjs
frontend/src/: VariableExplorer.test.tsx  VariableExplorer.tsx  index.tsx  kernelApi.test.ts  kernelApi.ts  standalone-app.tsx  standalone-widget.tsx  standalone.tsx  types.ts
frontend/src/test/: basic.test.ts  setup.ts
python/: __init__.py  agent_widget.py
tests/: __init__.py  conftest.py  run_tests.py  test_ai_service_regression.py  test_automatic.py  test_chat_synchronization.py  test_chat_synchronization_pytest.py  test_enhanced_agent_widget.py  test_git_native_tools.py  test_global_agent_auto_detection.py  test_imported_modules_context.py  test_kernel_error_handling.py  test_kernel_interface.py  test_langgraph_approval.py  test_message_handlers.py  test_notebook.py  test_prompt_config_regression.py  test_runner_pytest.py  test_summary.py  test_widget.ipynb  test_widget.py  test_widget_basic.py  test_widget_comprehensive.py  test_widget_simple.py
