[project]
name = "assistant-ui-widget"
version = "0.1.0"
description = "AnyWidget integration with Assistant-UI"
authors = [
    {name = "Assistant", email = "assistant@example.com"}
]
dependencies = [
    "anywidget",
    "traitlets",
    "jupyter",
    "ipywidgets",
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "python/**/*.py",
    "frontend/dist/**/*"
]

[tool.hatch.build.targets.wheel]
packages = ["python"]

[dependency-groups]
dev = [
    "notebook>=7.3.3",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
]
